--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-native-module-template",
-  "version": "0.1.0",
-  "description": "react native module template",
+  "name": "demo-login",
+  "version": "1.0.0",
+  "description": "demo login",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
@@ -13,7 +13,7 @@
     "android",
     "ios",
     "cpp",
-    "react-native-module-template.podspec",
+    "demo-login.podspec",
     "!lib/typescript/example",
     "!android/build",
     "!ios/build",
@@ -36,13 +36,13 @@
     "ios",
     "android"
   ],
-  "repository": "https://github.com/MrSolz/react-native-module-template",
+  "repository": "https://github.com/MrSolz/demo-login",
   "author": "Thanh Son Dang <sondt.gvn@gmail.com> (https://github.com/MrSolz)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/MrSolz/react-native-module-template/issues"
+    "url": "https://github.com/MrSolz/demo-login/issues"
   },
-  "homepage": "https://github.com/MrSolz/react-native-module-template#readme",
+  "homepage": "https://github.com/MrSolz/demo-login",
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
